k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: claim-adjudication
  labels:
    project: claim-adjudication
