k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claim-adjudication
  namespace: claim-adjudication
  labels:
    app: claim-adjudication
spec:
  type: ClusterIP
  selector:
    app: claim-adjudication
  ports:
    - name: http
      port: 80
      targetPort: http
